# pySYD

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SYD.py  functions.py  main.py  models.py  paper.bib  paper.md  params_findex.txt  params_fitbg.txt  plots.py  requirements.txt  run.sh  scrape_output.py  setup.cfg  setup.py  syd.py  sydpy.py  target.py  test_requirements.txt  tutorial.ipynb  utils.py
.github/: pull-request-template.md
Code/: QUAKES.py  SYD.py  functions.py  initSYD.py  utils.py
Files/: background.csv  blank.txt  excess.csv  findex.csv  globalpars.csv  params_findex.txt  params_fitbg.txt  star_info.csv  todo.txt
dev/: Estimate numax.ipynb  cli.py  models.py  pipeline.py  plots.py  target.py  utils.py  version.py
docs/: AUTHORS.rst  COLLABORATORS.rst  CONTRIBUTORS.rst  Makefile  about.rst  advanced.rst  api.rst  attribution.rst  citing.rst  cli.rst  community.rst  conf.py  examples.rst  extra.rst  faq.rst  functions.rst  getting_started.rst  glossary.rst  guidelines.rst  index.rst  installation.rst  library-about.rst  library-index.rst  library-input.rst  library-output.rst  library-pipeline.rst  library-target.rst  library-utils.rst  models.rst  other.rst  overview.rst  performance.rst  pipeline.rst  plots.rst  quickstart.rst  references.bib  related.rst  requirements.txt  setup.rst  target.rst  (+11 more)
example_data/: 11618103_PS.txt
example_files/: excess.csv
examples/: Estimate numax.ipynb  Intro.ipynb  commands.txt  pySYDxSYD.ipynb
(+254 files in other folders)
