[metadata]
name = astero
version = 0.0.2
license = MIT
author = Ashley Chontos
author_email = achontos@hawaii.edu
description = Automated extraction of global asteroseismic parameters
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/ashleychontos/sydpy
project_urls = 
    Documentation = https://readthedocs.org/projects/syd-pypline
    Source = https://github.com/ashleychontos/sydpy
    Bug Tracker = https://github.com/ashleychontos/sydpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = sydpy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = sydpy
